# hw_fishml

./: README.md  pyproject.toml
src/fish/: fishml.py  knn_model.pkl
