[project]
name = "fish"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "numpy>=2.1.1",
    "scikit-learn>=1.5.1",
    "pytest>=8.3.2",
    "sklearn>=0.0.post12",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
